# db-change-tracker

./: .gitignore  README.md  main.py  pyproject.toml
src/db_change_tracker/: config.py  connector_manager.py  consumer.py  db_initializer.py  docker_manager.py  gui.py  main.py
